Fixed as many compiler warnings as possible.